# tell-me-why

./: .gitignore  CLI.md  DOCKER.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  config.yaml  docker-compose.yml  env.example  nextjs_outline.md  pyproject.toml  quickstart.sh
frontend/: .env.local.example  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx  providers.tsx
frontend/app/api/query/: route.ts
frontend/components/: ThemeRegistry.tsx
frontend/components/chat/: ChatInterface.tsx  CodeBlock.tsx  MessageBubble.tsx  MessageInput.tsx
frontend/components/layout/: FileExplorer.tsx  FileViewer.tsx  Header.tsx  Sidebar.tsx
frontend/docs/: PROMPTS.md
frontend/hooks/: useChat.ts
frontend/lib_fe/: api.ts  theme.ts  types.ts  utils.ts
src/tell_me_why/: __init__.py  app.py  cli.py  config.py  file_service.py  ingest.py  rag_chain.py
tests/: test_api.py
