[project]
name = "tell-me-why"
version = "0.1.0"
description = "Privacy-preserving RAG system for Angular/React code assistance"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-anthropic>=0.1.0",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tiktoken>=0.5.2",
    "anthropic>=0.18.0",
    "ollama>=0.1.6",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "hatchling>=1.28.0",
    "notebook>=7.5.2",
    "langchain-huggingface>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
]

[project.scripts]
# Main CLI entry point
tmw = "tell_me_why.cli:app"

# Legacy/convenience aliases (all route to main CLI)
tmw-setup = "tell_me_why.cli:setup_command"
tmw-start = "tell_me_why.cli:start_command"
tmw-ingest = "tell_me_why.cli:ingest_command"
tmw-test = "tell_me_why.cli:test_command"
tell-me-why = "tell_me_why.cli:app"
rag-setup = "tell_me_why.cli:setup_command"
rag-serve = "tell_me_why.cli:start_command"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
